fix: corrected file names for images for YouTube page.

--- a/youtube.html
+++ b/youtube.html
@@ -65,7 +65,7 @@
             <div class="col-6">
                 <p>Here You'll find a list of my YouTube videos. Currently I'm owrking on review of resources that helped me. <br><br>This applies to more than just web development! In the near futrure I'll be adding videos specific to building web sites. <br><br> Thanks for taking a look. feel free to <a href="">check out my channel.</a></p>
             </div>
-                <img src="img/youTube/yt_channel.jpg" class="col-6" alt="Youtube channel banner">
+                <img src="img/youtube/yt_channel.jpg" class="col-6" alt="Youtube channel banner">
         </div> <!-- END ROW -->
     </div><!-- END CONTENT WRAPPER -->
 
