--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
                <ul>
                   <li><a href="index.html">Home</a></li>
                   <li  class="active"><a href="#">Projects</a></li>
-                  <li><a href="youtube.html">YouTube</a></li>
+                  <li><a href="videos.html">YouTube</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Connect</a></li>
                </ul>
@@ -38,7 +38,7 @@
             <ul>
                <li><a href="#">Home</a></li>
                <li class="phone_active"><a href="#">Projects</a></li>
-               <li><a href="youtube.html">YouTube</a></li>
+               <li><a href="videos.html">YouTube</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="contact.html">Connect</a></li>
             </ul>
