--- a/web_opt.html
+++ b/web_opt.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="project.html">Projects</a></li>
-                    <li><a href="youtube.html">YouTube</a></li>
+                    <li><a href="videos.html">YouTube</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Connect</a></li>
                 </ul>
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Projects</a></li>
-                <li><a href="youtube.html">YouTube</a></li>
+                <li><a href="videos.html">YouTube</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Connect</a></li>
             </ul>
