fix: removed verification document and replaced with meta tag for YouTube verification

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <meta name="google-site-verification" content="zOPP7I8kGKX213L4-JRrs2SIDgzKTk8w-1n4qaSCrak" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8">
       <meta name="description" content="All things web development by Ricky Garcia">
