fix: Corrected typo on homepage

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <!-- END COLUMN -->
                   <div class="col-6">
                      <h2>Need Your Own Website?</h2>
-                     <p>Let's can work together to build your online presence. WordPress, Wix, Bootstrap, and straight HTML and CSS. There are so many options to choose from. Working together, we can find what option works best for you according to your requirements. </p>
+                     <p>Let's work together to build your online presence. WordPress, Wix, Bootstrap, and straight HTML and CSS. There are so many options to choose from. Working together, we can find what option works best for you according to your requirements. </p>
                      <a href="">Let's connect</a>
                   </div>
                   <!-- END COLUMN -->
