Fixed a few margin and padding issues in services and contact sections

--- a/index.html
+++ b/index.html
@@ -266,17 +266,17 @@
                </div>
             </div>
             <div class="row">
-               <div class="col-md-4">
+               <div class="col-md-4 contact-margin">
                   <h3>Email:</h3>
                   <a href="mailto:simplysocialid@outlook.com">
                   <h4>simplysocialid@outlook.com</h4>
                   </a>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-4 contact-margin">
                   <h3>Phone:</h3>
                   <h4 class="phone-text">208.705.0955</h4>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-4 contact-margin">
                   <h3>LinkedIn</h3>
                   <a href="https://linkedin.com/in/richardgarcia2" target="_blank">
                      <h4>linkedin.com/in/richardgarcia2</h4>
