--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                <!-- section one -->
                <div class="col-sm-4">
                   <h2>Hi, My Name Is Richard</h2>
-                  <p>Social Media Manager. <br>Frontend Web Developer. <br>Lifelong Learner</p>
+                  <p>Social Media Manager. <br>Frontend Web Developer. <br>Lifelong Learner.</p>
                   <img src="images/Watermark_icon.png" class="watermark-icon" alt="circular logo with cartoon character resembling Ricky">
                </div>
                <div class="col-sm-4">
